--- a/2week/tsconfig.json
+++ b/2week/tsconfig.json
@@ -7,9 +7,9 @@
         "skipLibCheck": true,
         "baseUrl": "./",
         "paths": {
-            "@style/*": ["src/style/*"],
-            "@components/*": ["src/components/*"],
-            "@libs/*": ["src/libs/*"]
+            "@components/*": ["src/question/components/*"],
+            "@api/*": ["src/apis/*"],
+            "@type/*": ["src/types/*"]
         },
 
         /* Bundler mode */
@@ -26,7 +26,6 @@
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true
     },
-    "include": ["src/**/*"],
-    "exclude": ["node_modules"],
+    "include": ["src"],
     "references": [{ "path": "./tsconfig.node.json" }]
 }
