--- a/Task3/tsconfig.json
+++ b/Task3/tsconfig.json
@@ -19,12 +19,13 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "baseUrl": "./src", // base를 src로두고 
+    "baseUrl": "./src", // base를 src로두고
     "paths": {
       "#types/*": ["types/*"], //#폴더이름 그아래파일들 에대한 임포트할때사용하려고 다만들었습니다.
       "#question/*": ["question/*"],
       "#apis/*": ["apis/*"],
-      "#const/*": ["const/*"]
+      "#const/*": ["const/*"],
+      "#hooks/*": ["hooks/*"]
     }
   },
   "include": ["src"],
