--- a/task3/tsconfig.json
+++ b/task3/tsconfig.json
@@ -1,5 +1,12 @@
 {
   "compilerOptions": {
+    "baseUrl": "./src",
+    "paths": {
+      "@apis/*":["src/apis/*"],
+      "@assets/*":["src/assets/*"],
+      "@types/*" : ["src/types/*"],
+      "@question/*":["src/question/*"],
+    },
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
