feat: task3 -절대경로 설정

--- a/task3/tsconfig.json
+++ b/task3/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
-    "baseUrl": "./src",
+    "baseUrl": "./",
     "paths": {
       "@apis/*":["src/apis/*"],
       "@assets/*":["src/assets/*"],
       "@types/*" : ["src/types/*"],
+      "@question/components/*":["src/question/components/*"],
       "@question/*":["src/question/*"],
     },
     "target": "ES2020",
