feat: task3, API 통신 통해 받은 데이터 타입 부여

--- a/task3/tsconfig.paths.json
+++ b/task3/tsconfig.paths.json
@@ -9,6 +9,8 @@
       "@type/*": ["src/types/*"],
       "@asset/*": ["src/assets/*"],
       "@api/*": ["src/apis/*"],
+      "@util/*": ["src/utils/*"],
+      "@hook/*": ["src/hooks/*"],
     }
   },
 }
