feat: task3-1 진행중

--- a/task3/tsconfig.json
+++ b/task3/tsconfig.json
@@ -4,7 +4,7 @@
     "paths": {
       "@apis/*":["src/apis/*"],
       "@assets/*":["src/assets/*"],
-      "@types/*" : ["src/types/*"],
+      "@type/*": ["src/types/*"],
       "@question/components/*":["src/question/components/*"],
       "@question/*":["src/question/*"],
     },
