readme : task3, README 작성

--- a/task3/tsconfig.json
+++ b/task3/tsconfig.json
@@ -22,9 +22,8 @@
     
   },
   "include": ["src"],
+  "extends": "./tsconfig.paths.json",
   "references": [
     { "path": "./tsconfig.node.json" },
-    { "path": "./tsconfig.paths.json" },
-  
   ]
 }
